# osworld-dag-scheduler

./: README.md  agent_runtime.py  agent_utils.py  bedrock_client.py  collaborative_sheet_urls.json  dag_core.py  dag_planner.py  dag_worker.py  display_pool.py  extract_action_dag.py  fork_agent.py  google_sheets_oauth.py  orchestrator.py  pyproject.toml  resource_model.py  run_baseline_task.py  run_benchmark.py  run_orchestrator.py  run_scheduler.py  scheduler.py  setup_collaborative_workspace.py  setup_executor.py  test_autonomous_fork.py  test_fork_agent.py  test_parallel_fork.py  test_setup_executor.py  xvfb_display.py
desktop_env/evaluators/getters/: __init__.py  chrome.py
desktop_env/providers/aws/: AWS_GUIDELINE.md
evaluation_examples/: collaborative_task_configs.json
evaluation_examples/examples/collaborative/: 030eeff7-collaborative.json  05dd4c1d-collaborative.json  1f18aa87-collaborative.json  67890eb6-collaborative.json
scripts/python/: regenerate_trajectory.py  run_batch_fork_parallel.py  run_batch_osworld_baseline.py  run_batch_osworld_parallel.py  run_batch_osworld_scheduler.py  trajectory_generator.py  trajectory_generator_baseline.py
