[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osworld"
version = "0.1.0"
description = "Barebones task agent for OSWorld"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Meta", email = "opensource@meta.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
    "langchain>=0.3.21",
    "langchain-core>=0.3.45",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.1.0",
    "aioconsole>=0.7.1",
    "bashlex>=0.17",
    "httpx>=0.28.1",
    "pexpect>=4.9.0",
    "msgpack>=1.1.1",
    "pydantic>=2.11.0",
    "rich>=14.0.0",
    "click>=8.1.7",
    "cryptography>=38.0.3,<46.0.0",
    "typing-extensions>=4.12.2",
    "nest-asyncio",
    # === OSWorld deps ===
    "numpy",
    "backoff",
    "pandas",
    "openai",
    "anthropic",
    "fastapi",
    "zhipuai",
    "groq",
    "boto3",
    "uvicorn",
    "paddleocr",
    "paddlepaddle",
    "together",
    "scikit-learn",
    "websockets",
    "tiktoken",
    "pyautogui~=0.9.54",
    "toml",
    "exa_py",
    "certifi",
    "pytesseract",
    "google-genai",
    "python-dotenv",
    "Pillow~=11.0.0",
    "fabric",
    "gymnasium~=0.28.1",
    "requests",
    "pytz~=2024.1",
    "transformers~=4.35.2",
    "torch~=2.5.0",
    "accelerate",
    "opencv-python-headless~=4.8.1.78",
    "matplotlib~=3.7.4",
    "psutil~=5.9.6",
    "tqdm~=4.65.0",
    "flask~=3.0.0",
    "requests-toolbelt~=1.0.0",
    "lxml",
    "cssselect",
    "xmltodict",
    "openpyxl",
    "python-docx",
    "python-pptx",
    "pypdf",
    "PyGetWindow",
    "rapidfuzz",
    "pyacoustid",
    "pygame",
    "ImageHash",
    "scikit-image",
    "librosa",
    "pymupdf",
    "chardet",
    "playwright",
    "formulas",
    "pydrive",
    "fastdtw",
    "odfpy",
    "func-timeout",
    "beautifulsoup4",
    "dashscope",
    "google-generativeai",
    "PyYaml",
    "mutagen",
    "easyocr",
    "borb",
    "pdfplumber",
    "wandb",
    "wrapt_timeout_decorator",
    "gdown",
    "azure-identity",
    "azure-mgmt-compute",
    "azure-mgmt-network",
    "docker",
    "loguru",
    'pyobjc; platform_system == "Darwin"',
    'pywinauto; platform_system == "Windows"',
    'pywin32; platform_system == "Windows"',
    "tldextract>=5.3.0",
    # === OSWorld additional deps ===
    "ag2~=0.9.7",
    "pynput~=1.7.6",
    "alibabacloud_ecs20140526",
    "alibabacloud_tea_openapi",
    "alibabacloud_tea_util",
    "json_minify",
    "json_repair",
    "volcengine-python-sdk[ark]",
    "ui-tars>=0.4.2.2",
    "plotly>=6.2.0",
    "ipython>=8.12.2",
    "botocore>=1.39.10",
]

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools.packages.find]
include = ["mm_agents*", "desktop_env*", "self_play*"]
